tests/lexer/lexer-invalid-char.swg
¤ // swc-expected-error InvalidCharacter